// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComplianceReports expect to render an error 1`] = `
<ErrorPage
  error={
    Object {
      "error": "Test Error loading",
      "networkError": Object {
        "statusCode": 500,
      },
    }
  }
/>
`;

exports[`ComplianceReports expect to render emptystate 1`] = `
<Fragment>
  <PageHeader
    style={
      Object {
        "paddingBottom": 22,
      }
    }
  >
    <PageHeaderTitle
      title="Compliance"
    />
  </PageHeader>
  <Connect(Main)>
    <div
      className="policies-donuts"
    >
      <Grid
        gutter="md"
      >
        <CompliancePoliciesEmptyState />
      </Grid>
    </div>
  </Connect(Main)>
</Fragment>
`;

exports[`ComplianceReports expect to render loading 1`] = `
<Fragment>
  <PageHeader>
    <PageHeaderTitle
      title="Compliance"
    />
  </PageHeader>
  <Connect(Main)>
    <div
      className="policies-donuts"
    >
      <Grid
        gutter="md"
      >
        <LoadingComplianceCards />
      </Grid>
    </div>
  </Connect(Main)>
</Fragment>
`;

exports[`ComplianceReports expect to render without error 1`] = `
<Fragment>
  <PageHeader
    className="stable-page-header"
  >
    <PageHeaderTitle
      title="Compliance reports"
    />
    <withRouter(Connect(RouterParams)) />
  </PageHeader>
  <Connect(Main)>
    <div
      className="policies-donuts"
    >
      <Grid
        gutter="md"
      >
        <GridItem
          key="0"
          lg={6}
          md={12}
          sm={12}
          xl={4}
        >
          <ReportCard
            key="0"
            policy={
              Object {
                "businessObjective": Object {
                  "id": "1",
                  "title": "BO 1",
                },
                "complianceThreshold": 1,
                "compliantHostCount": 1,
                "description": "profile description",
                "id": "1",
                "name": "profile1",
                "refId": "121212",
                "totalHostCount": 1,
              }
            }
          />
        </GridItem>
      </Grid>
    </div>
  </Connect(Main)>
</Fragment>
`;
